--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
                 <h2>Tanishka <br><span>London, UK</span></h2>
             </div>
         </div>
+          <!-- mehvish  -->
+        <div class="card">
+            <div class="imgBox">
+                <img src="https://ih1.redbubble.net/image.5053399306.5606/raf,360x360,075,t,fafafa:ca443f4786.u3.jpg"
+                    alt="some image">
+            </div>
+            <div class="details">
+                <h2>Mehvish <br><span>SY-B </span></h2>
+            </div>
+        </div>
 <!--         saniya card -->
         <div class="card">
             <div class="imgBox">
