--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
                 <h2>piyush mahajan <br><span>Btech B, 223</span></h2>
             </div>
         </div>
-
+<!-- saniya  -->
+        <div class="card">
+            <div class="imgBox">
+                <img src="https://i.pinimg.com/236x/32/73/d5/3273d54e9ce7c16489d2e149dd68a628.jpg"
+                    alt="some image">
+            </div>
+            <div class="details">
+                <h2> Shaikh Saniya <br><span>mgm college Nanded</span></h2>
+            </div>
         <div class="card">
             <div class="imgBox">
                 <img src="https://images.unsplash.com/photo-1589156191108-c762ff4b96ab?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMxMzk5NTF8&ixlib=rb-4.0.3&q=80&w=400"
@@ -77,16 +85,7 @@
                 <h2>Mehvish <br><span>SY-B </span></h2>
             </div>
         </div>
-<!--         saniya card -->
-        <div class="card">
-            <div class="imgBox">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsharechat.com%2Fitem%2FgrOOMWr6&psig=AOvVaw0PTF5CLNHyNLJAS6SiEZVP&ust=1728725124208000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOC3tY2BhokDFQAAAAAdAAAAABAI"
-                    alt="some image">
-            </div>
-            <div class="details">
-                <h2> Shaikh Saniya <br><span>mgm college Nanded</span></h2>
-            </div>
-        </div>
+
     </div>
     </div>
 </body>
