--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <div class="details">
                 <h2> Shaikh Saniya <br><span>mgm college Nanded</span></h2>
             </div>
+                </div>
+
+<!--         another cards -->
         <div class="card">
             <div class="imgBox">
                 <img src="https://images.unsplash.com/photo-1589156191108-c762ff4b96ab?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMxMzk5NTF8&ixlib=rb-4.0.3&q=80&w=400"
