--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
                 <h2>Christine McKay <br><span>New York, US</span></h2>
             </div>
         </div>
-
+<!--Amaan  -->
+        <div class="card">
+            <div class="imgBox">
+                <img src="https://e1.pxfuel.com/desktop-wallpaper/589/802/desktop-wallpaper-cute-korean-cartoon-boy-smart-boy-cartoon-thumbnail.jpg"
+                    alt="some image">
+            </div>
+            <div class="details">
+                <h2>Mohammed Shahid Amaan <br><span>SY-B, 139</span></h2>
+            </div>
+        </div>
         <div class="card">
             <div class="imgBox">
                 <img src="https://images.unsplash.com/photo-1589156191108-c762ff4b96ab?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMxMzk5NTF8&ixlib=rb-4.0.3&q=80&w=400"
